hphp/test/zend/good/Zend/tests/call_static_005.php
<?php

class foo {
	static function __callstatic($a, $b) {
		var_dump($a);
	}
}

$a = 'foo::';
$a();

?>