hphp/test/zend/bad/zend/magic_methods_007.php
<?php

abstract class b {
	abstract protected function __set($a);
}

?>